--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@uploadcare/file-uploader": "^1.5.0",
+    "@uploadcare/react-uploader": "^1.0.0",
     "axios": "^1.7.2",
     "firebase": "^10.13.0",
     "react": "^18.3.1",
