--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.4.4",
     "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "resend": "^4.0.0"
   }
 }
